--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     testImplementation "org.mockito:mockito-core:2.+"
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
